# daca

./: .flake8  Makefile  README.md  pyproject.toml
ch1/: n_pow_n.ram
daca/: ram.py
examples/ch1/: emulate_ram.ram  emulate_ram.rasp  emulate_rasp.ram  emulate_rasp.rasp  equal_count.algol  n_pow_n.algol
scratch/: tape.py
src/daca/: __init__.py  cli.py  pidgin_algol.py  ram.py  xpile.py
src/daca/common/: __init__.py  exc.py  lex.py  lexer.py  parse.py  parser.py  token.py  util.py
src/daca/pidgin_algol/: __init__.py  __main__.py  ast.py  cli.py  compiler.py  lexer.py  parse.py  parser.py
src/daca/ram/: __init__.py  ast.py  cli.py  compiler.py  interpreter.py  lex.py  lexer.py  machine.py  parse.py  parser.py  program.py
src/daca/rasp/: __init__.py  cli.py  compiler.py  interpreter.py  lexer.py  parser.py  program.py
tests/: test_pidgin_algol.py  test_ram.py
tests/daca/: test_daca_common.py  test_daca_ram.py
tests/daca/common/: test_daca_common_exc.py  test_daca_common_lex.py  test_daca_common_lexer.py  test_daca_common_token.py
tests/daca/pidgin_algol/: conftest.py  test_daca_pidgin_algol_cli.py  test_daca_pidgin_algol_compiler.py  test_daca_pidgin_algol_lex.py  test_daca_pidgin_algol_lexer.py  test_daca_pidgin_algol_parse.py  test_daca_pidgin_algol_parser.py
tests/daca/ram/: conftest.py  test_daca_ram_cli.py  test_daca_ram_interpreter.py  test_daca_ram_lex.py  test_daca_ram_lexer.py  test_daca_ram_parse.py  test_daca_ram_parser.py
