[tool.poetry]
name = "daca"
version = "0.1.0"
description = "Design & Analysis of Computer Algorithms in Python"
authors = ["Data Mike <mjp35@cornell.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
ram = "daca.ram.cli:main"
palgol = "daca.pidgin_algol.cli:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
importmagic = "^0.1.7"
epc = "^0.0.5"
isort = "^5.12.0"
python-lsp-server = "^1.7.4"
black = ">=24.3.0"

[tool.poetry.group.test.dependencies]
mypy = "^1.4.1"
black = "^24.3.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.7.10"
flake8-isort = "^6.0.0"
flake8-black = "^0.3.6"
pytest = "^7.4.0"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["daca.*"]
follow_untyped_imports = true
