[tool.poetry]
name = "daca"
version = "0.1.0"
description = "Design & Analysis of Computer Algorithms in Python"
authors = ["Data Mike <mjp35@cornell.edu>"]
license = "MIT"
readme = "README.md"
packages = [ { include = "examples" }, { include = "daca", from = "src" } ]

[tool.poetry.scripts]
daca = "daca.cli:main"
ram = "daca.ram.cli:main"
rasp = "daca.rasp.cli:main"
palgol = "daca.pidgin_algol.cli:main"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
importmagic = "^0.2.0"
epc = "^0.0.5"
isort = "^8.0.1"
python-lsp-server = "^1.14.0"
black = "^26.3.1"

[tool.poetry.group.test.dependencies]
mypy = "^1.19.1"
black = "^26.3.1"
flake8 = "^7.3.0"
flake8-bugbear = "^25.11.19"
flake8-isort = "^7.0.0"
flake8-black = "^0.4.0"
pytest = "^9.0.2"
coverage = "^7.13.5"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["daca.*"]
follow_untyped_imports = true
